首页及BI图表更改

--- a/html/bi.html
+++ b/html/bi.html
@@ -31,44 +31,44 @@
 			'reportId' : 1,
 			'title' : '经营态势',
 			'target' : 'bi/jyts.html',
-			'img' : '../assets/home/task.png'
+			'img' : '../assets/home/jysj.png'
 		}, {
 			'reportId' : 6,
 			'title' : '收入利润趋势',
 			'target' : 'bi/srlrqs.html',
-			'img' : '../assets/home/news.png'
+			'img' : '../assets/home/jysj.png'
 		}, {
 			'reportId' : 11,
 			'title' : '收入完成',
 			'target' : 'bi/srwc.html',
-			'img' : '../assets/home/msg.png'
+			'img' : '../assets/home/jysj.png'
 		}, {
 			'reportId' : 16,
 			'title' : '利润完成',
 			'target' : 'bi/lrwc.html',
-			'img' : '../assets/home/task.png'
+			'img' : '../assets/home/jysj.png'
 		},
 
 		{
 			'reportId' : 21,
 			'title' : '风险状况',
 			'target' : 'bi/fxzk.html',
-			'img' : '../assets/home/task.png'
+			'img' : '../assets/home/jysj.png'
 		}, {
 			'reportId' : 31,
 			'title' : '收入板块',
 			'target' : 'bi/srbk.html',
-			'img' : '../assets/home/msg.png'
+			'img' : '../assets/home/jysj.png'
 		}, {
 			'reportId' : 36,
 			'title' : '利润板块',
 			'target' : 'bi/lrbk.html',
-			'img' : '../assets/home/news.png'
+			'img' : '../assets/home/jysj.png'
 		}, {
 			'reportId' : 66,
 			'title' : '收入利润',
 			'target' : 'bi/srlr.html',
-			'img' : '../assets/home/task.png'
+			'img' : '../assets/home/jysj.png'
 		} ];
 		var jsondata = localStorage.getItem("json");
 		var json = JSON.parse(jsondata);
