--- a/html/home2.html
+++ b/html/home2.html
@@ -74,16 +74,16 @@
 	}
 	//获取图标个数
 	function getTuBiao() {
-		var jsonData = [ {"id":1,"name":"集团新闻","img":"../assets/home/gwdb.png","target":"loadJtxw()"},
-		                 {"id":2,"name":"通知公告","img":"../assets/home/bi.png","target":"loadNewsList('GT_HomePage_SiteArea_jttz')"},
-		                 {"id":3,"name":"成员单位新闻","img":"../assets/home/aqsc.png","target":"loadNewsList('GT_HomePage_SiteArea_zgsxw')"},
-		                 {"id":4,"name":"公文代办","img":"../assets/home/gwdb.png","target":"loadTaskList()"},
-		                 {"id":5,"name":"公文查阅","img":"../assets/home/bi.png","target":"loadqueryList()"},
-		                 {"id":6,"name":"经营数据","img":"../assets/home/gwdb.png","target":"loadBI()"},
-		                 {"id":7,"name":"电子期刊","img":"../assets/home/gwdb.png","target":"loadBI()"},
-		                 {"id":8,"name":"聘免公告","img":"../assets/home/gwdb.png","target":"loadBI()"},
-		                 {"id":9,"name":"科技动态","img":"../assets/home/gwdb.png","target":"loadBI()"},
-		                 {"id":10,"name":"政策法规资讯","img":"../assets/home/gwdb.png","target":"loadZcfg()"},
+		var jsonData = [ {"id":1,"name":"集团新闻","img":"../assets/home/news.png","target":"loadJtxw()"},
+		                 {"id":2,"name":"通知公告","img":"../assets/home/tzgg.png","target":"loadNewsList('GT_HomePage_SiteArea_jttz')"},
+		                 {"id":3,"name":"成员单位新闻","img":"../assets/home/cydwxw.png","target":"loadNewsList('GT_HomePage_SiteArea_zgsxw')"},
+		                 {"id":4,"name":"公文代办","img":"../assets/home/task.png","target":"loadTaskList()"},
+		                 {"id":5,"name":"公文查阅","img":"../assets/home/gwcy.png","target":"loadqueryList()"},
+		                 {"id":6,"name":"经营数据","img":"../assets/home/jysj.png","target":"loadBI()"},
+		                 {"id":7,"name":"电子期刊","img":"../assets/home/dzqk.gif","target":"loadBI()"},
+		                 {"id":8,"name":"聘免公告","img":"../assets/home/doc.png","target":"loadBI()"},
+		                 {"id":9,"name":"科技动态","img":"../assets/home/kgxw.gif","target":"loadBI()"},
+		                 {"id":10,"name":"政策法规资讯","img":"../assets/home/icon2.gif","target":"loadZcfg()"},
 		                 {"id":11,"name":"安全生产","img":"../assets/home/aqsc.png","target":"loadAqsczbb()"}
 		               
 		                 ];
