--- a/html/jtxwz.html
+++ b/html/jtxwz.html
@@ -42,16 +42,14 @@
 			<div class="ui-grid-b" id="divOne">
 				<div class="ui-block-b">
 					<a href="javascript:void(0);" onclick="loadTpxwList()"> <img
-						id="imgToDo" src="../assets/home/gwdb.png" class="module-icon" />
+						id="imgToDo" src="../assets/home/kgxw.gif" class="module-icon" />
 					</a> <br />
-					<!-- <span id="spanTodo" class="bubble-count ui-btn-up-c ui-btn-corner-all">1</span> <br /> -->
 					<span style="color: #434343;"><strong>图片新闻</strong></span>
 				</div>
 				<div class="ui-block-b">
 					<a href="javascript:void(0);" onclick="loadNewsList('GT_HomePage_SiteArea_jtxw')"> <img
-						id="imgSearch" class="module-icon" src="../assets/home/gwcy.png" />
+						id="imgSearch" class="module-icon" src="../assets/home/news.png" />
 					</a> <br />
-					<!-- <span id="spanSearch" class="bubble-count ui-btn-up-c ui-btn-corner-all">1</span>  -->
 					<span style="color: #434343;"><strong>集团新闻</strong></span>
 				</div>
 				
