--- a/html/zcfgz.html
+++ b/html/zcfgz.html
@@ -27,13 +27,13 @@
 			<div class="ui-grid-b" id="divOne">
 				<div class="ui-block-b">
 					<a href="javascript:void(0);" onclick="loadTpxwList()"> <img
-						id="imgToDo" src="../assets/home/gwdb.png" class="module-icon" />
+						id="imgToDo" src="../assets/home/dbsy.gif" class="module-icon" />
 					</a> <br />
 					<span style="color: #434343;"><strong>安全环保</strong></span>
 				</div>
 				<div class="ui-block-b">
 					<a href="javascript:void(0);" onclick="loadNewsList('GT_HomePage_SiteArea_jtxw')"> <img
-						id="imgSearch" class="module-icon" src="../assets/home/gwcy.png" />
+						id="imgSearch" class="module-icon" src="../assets/home/icon2.gif" />
 					</a> <br />
 					<span style="color: #434343;"><strong>政策法规</strong></span>
 				</div>
