--- a/html/login.html
+++ b/html/login.html
@@ -89,6 +89,7 @@
 						//本地存储itcode 和oaServerName
 						localStorage.setItem("oaServerName",$.hori.getconfig().oaServerName)
 						localStorage.setItem("itcode",username);
+						localStorage.setItem("click", "news");
 						//$.cookie("itcode",username,{"expires":360000,path:"/"})
 						saveUserInfoToLocal(username);
 						
