--- a/html/home2.html
+++ b/html/home2.html
@@ -53,6 +53,13 @@
 		$.hori.showLoading();
 		$.hori.loadPage($.hori.getconfig().serverBaseUrl + 'viewhome/html/queryList.html');
 	}
+	//加载新闻列表
+	function loadNewsList(typeName) {
+		localStorage.setItem("moreCurrentName", typeName);
+		$.hori.showLoading();
+		$.hori.loadPage($.hori.getconfig().serverBaseUrl
+				+ 'viewhome/html/news/newsList.html');
+	}
 	//BI
 	function loadBI() {
 		$.hori.showLoading();
@@ -65,7 +72,6 @@
 			"success" : function(res) {
 				localStorage.setItem("Chinesename", res);
 				currentUser = "CN=" + res + "/O=genertec";
-				alert(currentUser);
 				localStorage.setItem("itcodetasklist", currentUser);
 			},
 			"error" : function(res) {
@@ -87,7 +93,6 @@
 		                 {"id":11,"name":"安全生产","img":"../assets/home/aqsc.png","target":"loadAqsczbb()"}
 		               
 		                 ];
-		console.log(jsonData);
 		var data = new Object();
 		data.list=jsonData;
 		render(data);
@@ -118,8 +123,25 @@
 <style>
 #divxs{
 width:33%;
-margin-bottom:20px;
-margin-top:20px
+line-height:3em;
+}
+/* @media screen and (min-width: 600px) and (max-width: 1900px) {
+  #imgToDo {
+    width:200px;
+    hright:200px;
+  }
+}
+@media screen and (min-width: 600px) and (max-width: 1900px) {
+  #imgToDo {
+    width:200px;
+    hright:200px;
+  }
+}
+@media screen and (min-width: 400px) and (max-width: 900px)and(min-height: 400px) and(max-height: 400px){
+  #imgToDo {
+    width:200px;
+    hright:200px;
+  } */
 }
 </style>
 </head>
