BI图标显示 bug修改

--- a/html/bi.html
+++ b/html/bi.html
@@ -71,7 +71,7 @@
 			'img' : '../assets/home/jysj.png'
 		} ];
 		var jsondata = localStorage.getItem("json");
-		var json = JSON.parse(jsondata);
+s		var json = JSON.parse(jsondata);
 		var target=[];
 		for (var i = 0; i < json.length; i++) {
 			for (var j = 0; j < allData.length; j++) {
