--- a/html/bi.html
+++ b/html/bi.html
@@ -6,6 +6,7 @@
 	content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=1.0" />
 <link rel="stylesheet" href="../lib/jquery-mobile/jquery.mobile.min.css" />
 <link rel="stylesheet" href="../assets/jquery.mobile-sugon.css" />
+<script src="../lib/jquery/jquery.min.js"></script>
 <script src="../lib/jquery-cookie/jquery.cookie.js"></script>
 <script src="../lib/encrypt/encrypt.js"></script>
 <script src="../lib/json/json2.js"></script>
@@ -15,11 +16,6 @@
 <script src="../config/web/config.js"></script>
 
 <link rel="stylesheet" href="../lib/app/home/css/news.css">
-<script type="text/javascript" src="src/extend/zepto.js"></script>
-<script type="text/javascript" src="src/extend/touch.js"></script>
-<script type="text/javascript" src="src/extend/iscroll.js"></script>
-<script type="text/javascript" src="src/extend/highlight.js"></script>
-<script type="text/javascript" src="src/extend/parseTpl.js"></script>
 <script src="../lib/knockout/knockout.js"></script>
 <script src="../lib/knockout/knockout.mapping.js"></script>
 
@@ -95,6 +91,12 @@
 		var viewModel = ko.mapping.fromJS(jsonData);
 		ko.applyBindings(viewModel,document.getElementById("divBi"));
 	}
+	//点击进入详情页面
+	function loadBi(item) {
+		var url=item.target();
+		$.hori.loadPage($.hori.getconfig().serverBaseUrl
+						+ "viewhome/html/"+url);
+	}
 </script>
 </head>
 <body>
@@ -102,7 +104,7 @@
 		<div class="ui-grid-b" id="divBi">
 		<div data-bind="foreach: list" style="width:100%;">
 			<div class="ui-block-c"style="width:33.3%;margin-bottom:20px;margin-top:20px;">
-				<a  data-bind="attr:{'href':target}" > <img
+				<a  data-bind="click:loadBi" > <img
 					id="imgToDo" data-bind="attr:{'src':img}" class="module-icon"/>
 				</a> <br /> 
 				<span style="color: #434343;" ><strong data-bind="text:title"></strong></span>
