--- a/html/task.html
+++ b/html/task.html
@@ -2,6 +2,7 @@
 <html>
 <head>
 	<title>代办</title>
+	<!-- <base href="http://192.168.1.110:90/" /> -->
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=1.0"/>
 	<script type="application/javascript" src="../assets/iscroll.js"></script>
