--- a/html/bi.html
+++ b/html/bi.html
@@ -22,6 +22,7 @@
 <script type="text/javascript">
 	var currentUser = "";
 	$(document).ready(function() {
+		$.hori.setHeaderTitle("BI图表");
 		var allData = [ {
 			'reportId' : 1,
 			'title' : '经营态势',
