--- a/html/task.html
+++ b/html/task.html
@@ -40,7 +40,13 @@
 				</ul>				
 			</div>
 			<div id="taskList">
-				
+				<div id="wrapper" style="overflow: scroll;width: 99%;margin-left: -10px;">
+					<div id="scroller">
+						<div id="pullUp" align="center" class="">
+						<span class="pullUpLabel">上拉加载更多...</span>
+						</div>
+					</div>
+				</div>
 			</div>
 		</div>
 		
