--- a/html/task.html
+++ b/html/task.html
@@ -42,6 +42,8 @@
 			<div id="taskList">
 				<div id="wrapper" style="overflow: scroll;width: 99%;margin-left: -10px;">
 					<div id="scroller">
+						<div id="listcontent">
+						</div>
 						<div id="pullUp" align="center" class="">
 						<span class="pullUpLabel">上拉加载更多...</span>
 						</div>
